fixed spacing issues

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -34,7 +34,7 @@ select {
     border-radius: 2px;
     -webkit-appearance: none;
     background: #F2F2F2 url("../images/arrow.png") no-repeat 95% 50%;
-    box-shadow: 0 2px 2px #BFBCB8;
+    box-shadow: 0 2px 2px $color-cream-shadow;
     width: 132px;
 }
 
