--- a/src/scss/_brand.scss
+++ b/src/scss/_brand.scss
@@ -3,16 +3,17 @@
 
   &-image {
     display: block;
-    margin: -15px auto 0 auto;
+    margin: 0 auto 0 auto;
     width: 280px
 }
 }
 
 @media (min-width: 768px) {
+
     .brand-image {
         margin: -15px 0 0 20px;
         width: 360px
-    }
+}
 }
 
 @media (min-width: 1200px) {
